# scriberlib

./: CMakeLists.txt  README.md
example/: main.cpp
include/: Attributes.h  ForwardDecl.h  IRenderAPI.h  Image.h  Scriber.h  Utils.h
sources/: FaceCollection.cpp  FaceCollection.h  Glyph.h  GlyphBitmapStash.cpp  GlyphBitmapStash.h  Image.cpp  Layout.cpp  Layout.h  Scriber.cpp  StringFormater.cpp  StringFormater.h  StringStash.cpp  StringStash.h  TextRenderer.cpp  TextRenderer.h  sdfRasterizer.h  simd.h
